<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerlayout"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="10dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:paddingVertical="4dp"
            >

            <ImageView
                android:id="@+id/imageUser"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:paddingRight="5dp"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/textinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:text="Información de Usuario "
                android:layout_toRightOf="@id/imageUser"
                android:textStyle="bold"
                />


            <TextView
                android:id="@+id/textUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Usuario: "
                android:layout_toRightOf="@id/imageUser"
                android:layout_below="@id/textinfo"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre Usario"
                android:layout_toRightOf="@id/textUser"
                android:layout_below="@id/textinfo"/>


            <TextView
                android:id="@+id/textUserDATE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Usuario Creado: "
                android:layout_toRightOf="@id/imageUser"
                android:layout_below="@id/textUser"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/userDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="fecha"
                android:layout_toRightOf="@id/textUserDATE"
                android:layout_below="@id/textUser"/>


            <TextView
                android:id="@+id/textUserBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Fecha de Nacimiento: "
                android:layout_toRightOf="@id/imageUser"
                android:layout_below="@id/textUserDATE"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/userBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="fecha"
                android:layout_toRightOf="@id/textUserBirthday"
                android:layout_below="@id/textUserDATE"/>



            <TextView
                android:id="@+id/textTransacinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAlignment="center"
                android:text="Información de Transacción "
                android:layout_toRightOf="@id/imageUser"
                android:layout_below="@id/textUserBirthday"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />


            <TextView
                android:id="@+id/textCommerce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textBranchR"
                android:text="Comercio: "
                android:layout_toRightOf="@id/imageUser"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/commerce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textBranchR"
                android:text="Nombre Commercio"
                android:layout_toRightOf="@id/textCommerce"/>


            <TextView
                android:id="@+id/textBranchR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textPuntos"
                android:text="Rama: "
                android:layout_toRightOf="@id/imageUser"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/branchname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textPuntos"
                android:text="rama"
                android:layout_toRightOf="@id/textBranchR"/>


            <TextView
                android:id="@+id/textValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textTransacinfo"
                android:text="Valor transacción: $"
                android:layout_toRightOf="@id/imageUser"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textTransacinfo"
                android:text="valor"
                android:layout_toRightOf="@id/textValor"/>


            <TextView
                android:id="@+id/textPuntos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textValor"
                android:text="Puntos: "
                android:layout_toRightOf="@id/imageUser"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/puntos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textValor"
                android:text="puntos"
                android:layout_toRightOf="@id/textPuntos"/>

        </RelativeLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/FAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_delete_black_24dp"
            android:visibility="visible"
            app:fabSize="auto"
            tools:visibility="visible" />

    </androidx.cardview.widget.CardView>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/navigationview">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </com.google.android.material.navigation.NavigationView>



</androidx.drawerlayout.widget.DrawerLayout>